present: prevent FAQs from overflowing accordion

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1965,6 +1965,8 @@ form {
     button.btn {
       padding: 0;
       font-size: 18px;
+      text-align: left;
+      white-space: normal;
 
       &.btn-link:hover,
       &.btn-link:focus {
